--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <!-- Primary Meta Tags -->
     <title>KOMAINU | The Decentralized Betting Revolution</title>
     <meta name="title" content="KOMAINU | The Decentralized Betting Revolution">
-    <meta name="description" content="KOMAINU is a decentralized
-                                        betting platform that allows users to earn decentralized assets through
-                                        responsible gambling. It is a chance to experience the latest technology in
-                                        crypto and bring its benefits to a wider audience.">
+    <meta name="description"
+        content="KOMAINU is a decentralized betting platform that allows users to earn decentralized assets through responsible gambling. It is a chance to experience the latest technology in crypto and bring its benefits to a wider audience.">
 
     <meta name="author" content="kochikuko">
     <meta name="robots" content="index, follow">
@@ -23,20 +21,16 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://komainu.live/">
     <meta property="og:title" content="KOMAINU | The Decentralized Betting Revolution">
-    <meta property="og:description" content="KOMAINU is a decentralized
-                                        betting platform that allows users to earn decentralized assets through
-                                        responsible gambling. It is a chance to experience the latest technology in
-                                        crypto and bring its benefits to a wider audience.">
+    <meta property="og:description"
+        content="KOMAINU is a decentralized betting platform that allows users to earn decentralized assets through responsible gambling. It is a chance to experience the latest technology in crypto and bring its benefits to a wider audience.">
     <meta property="og:image" content="https://github.com/Kochikuko/komainu/blob/main/cover.png?raw=true">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://komainu.live/">
     <meta property="twitter:title" content="KOMAINU | The Decentralized Betting Revolution">
-    <meta property="twitter:description" content="KOMAINU is a decentralized
-                                        betting platform that allows users to earn decentralized assets through
-                                        responsible gambling. It is a chance to experience the latest technology in
-                                        crypto and bring its benefits to a wider audience.">
+    <meta property="twitter:description"
+        content="KOMAINU is a decentralized betting platform that allows users to earn decentralized assets through responsible gambling. It is a chance to experience the latest technology in crypto and bring its benefits to a wider audience.">
     <meta property="twitter:image" content="https://github.com/Kochikuko/komainu/blob/main/cover.png?raw=true">
 
     <!-- need meta.io -->
